bk_ida/gccida/g3/offsettable_memref_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/offsettable_memref_p/src/recog.c:2417:32: error: use of undeclared identifier 'machine_mode'
&& v6 <= get_mode_alignment( ( machine_mode)( unsigned __int8)v3) >> 3 ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/offsettable_memref_p/src/recog.c:2417:47: error: expected expression
&& v6 <= get_mode_alignment( ( machine_mode)( unsigned __int8)v3) >> 3 ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/offsettable_memref_p/src/recog.c:2420:32: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_fmt_ee( LO_SUM, ( machine_mode)*( ( unsigned __int8 *)rtwint + 2), *( ( rtx *)rtwint + 1), v11); 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/offsettable_memref_p/src/obj/recog.o] Error 1
